backends/libinput: Clear event queue before destroying input devices

The event objects can be destroyed after libinput_unref(), which is illegal.

BUG: 499840